@@ -190,6 +190,7 @@ ImpressCMS ChangeLog
 * #37: iTheme as default theme of ImpressCMS. (stranger)
 * #216: Signature destroyed the design. (stranger)
 * #60: Date format more configurable. (stranger)
+* #275: Upgrade Script issue from X 2.2.4 - Unable to register new users. (stranger)
 
 == Impresscms 1.1.2==
 
